--- a/requirements/full/requirements_cpu_only_noavx2.txt
+++ b/requirements/full/requirements_cpu_only_noavx2.txt
@@ -1,7 +1,6 @@
-accelerate==1.5.*
+accelerate==1.8.*
 colorama
 datasets
-duckduckgo_search==8.0.2
 einops
 fastapi==0.112.4
 gradio==4.37.*
@@ -10,7 +9,7 @@ jinja2==3.1.6
 markdown
 numpy==2.2.*
 pandas
-peft==0.15.*
+peft==0.16.*
 Pillow>=9.5.0
 psutil
 pydantic==2.8.2
@@ -23,7 +22,8 @@ safetensors==0.5.*
 scipy
 sentencepiece
 tensorboard
-transformers==4.50.*
+transformers==4.55.*
+triton-windows==3.2.0.post19; platform_system == "Windows"
 tqdm
 wandb
 
@@ -33,5 +33,5 @@ sse-starlette==1.6.5
 tiktoken
 
 # llama.cpp (CPU only, no AVX2)
-https://github.com/oobabooga/llama-cpp-binaries/releases/download/v0.20.0/llama_cpp_binaries-0.20.0+cpuavx-py3-none-linux_x86_64.whl; platform_system == "Linux" and platform_machine == "x86_64" and python_version == "3.11"
-https://github.com/oobabooga/llama-cpp-binaries/releases/download/v0.20.0/llama_cpp_binaries-0.20.0+cpuavx-py3-none-win_amd64.whl; platform_system == "Windows" and python_version == "3.11"
+https://github.com/oobabooga/llama-cpp-binaries/releases/download/v0.32.0/llama_cpp_binaries-0.32.0+cpuavx-py3-none-linux_x86_64.whl; platform_system == "Linux" and platform_machine == "x86_64" and python_version == "3.11"
+https://github.com/oobabooga/llama-cpp-binaries/releases/download/v0.32.0/llama_cpp_binaries-0.32.0+cpuavx-py3-none-win_amd64.whl; platform_system == "Windows" and python_version == "3.11"
